[gd_scene load_steps=13 format=3 uid="uid://jy3rr20ai13h"]

[ext_resource type="Script" path="res://microjogos/2023S1/projeto-pochete/cenas/scripts/main.gd" id="1_lpq7u"]
[ext_resource type="Script" path="res://microjogos/2023S1/projeto-pochete/cenas/Head.gd" id="2_4e5al"]
[ext_resource type="Texture2D" uid="uid://b2ewevkcwrjm8" path="res://microjogos/2023S1/projeto-pochete/recursos/textures_240.png" id="2_fu30q"]
[ext_resource type="PackedScene" uid="uid://bykv68tu5abeg" path="res://microjogos/2023S1/projeto-pochete/cenas/Tail.tscn" id="4_jmum3"]
[ext_resource type="AudioStream" uid="uid://dgs58m08tcmp3" path="res://microjogos/2023S1/projeto-pochete/recursos/Forest_Ambience.mp3" id="5_6liii"]
[ext_resource type="AudioStream" uid="uid://bevdqslneqmkd" path="res://microjogos/2023S1/projeto-pochete/recursos/apple_bite_0.ogg" id="6_1kutd"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_we87e"]
texture = ExtResource("2_fu30q")
texture_region_size = Vector2i(120, 120)
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-60, -60, 60, -60, 60, 60, -60, 60)
1:0/0 = 0
1:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:0/0/physics_layer_0/angular_velocity = 0.0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-60, -60, 60, -60, 60, 60, -60, 60)
2:0/0 = 0
2:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:0/0/physics_layer_0/angular_velocity = 0.0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-60, -60, 60, -60, 60, 60, -60, 60)
3:0/0 = 0
3:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:0/0/physics_layer_0/angular_velocity = 0.0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-60, -60, 60, -60, 60, 60, -60, 60)
4:0/0 = 0
4:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:0/0/physics_layer_0/angular_velocity = 0.0
5:0/0 = 0
5:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:0/0/physics_layer_0/angular_velocity = 0.0
6:0/0 = 0
6:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:0/0/physics_layer_0/angular_velocity = 0.0
0:1/0 = 0
0:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:1/0/physics_layer_0/angular_velocity = 0.0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-60, -60, 60, -60, 60, 60, -60, 60)
1:1/0 = 0
1:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:1/0/physics_layer_0/angular_velocity = 0.0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-60, -60, 60, -60, 60, 60, -60, 60)
2:1/0 = 0
2:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:1/0/physics_layer_0/angular_velocity = 0.0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-60, -60, 60, -60, 60, 60, -60, 60)
3:1/0 = 0
3:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:1/0/physics_layer_0/angular_velocity = 0.0
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-60, -60, 60, -60, 60, 60, -60, 60)
4:1/0 = 0
4:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:1/0/physics_layer_0/angular_velocity = 0.0
4:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-60, -60, 60, -60, 60, 60, -60, 60)
5:1/0 = 0
5:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:1/0/physics_layer_0/angular_velocity = 0.0
6:1/0 = 0
6:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:1/0/physics_layer_0/angular_velocity = 0.0

[sub_resource type="TileSet" id="TileSet_aa8j7"]
tile_size = Vector2i(120, 120)
physics_layer_0/collision_layer = 1
sources/2 = SubResource("TileSetAtlasSource_we87e")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rpxpl"]
size = Vector2(60, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_gug1r"]
atlas = ExtResource("2_fu30q")
region = Rect2(360, 0, 120, 120)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_i1m6b"]
size = Vector2(120, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_lgbwx"]
atlas = ExtResource("2_fu30q")
region = Rect2(240, 0, 120, 120)

[node name="Main" type="Node2D"]
script = ExtResource("1_lpq7u")

[node name="Camera3D" type="Camera2D" parent="."]
anchor_mode = 0

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_aa8j7")
format = 2
layer_0/name = "bg"
layer_0/tile_data = PackedInt32Array(0, 262146, 1, 65536, 262146, 1, 131072, 262146, 1, 196608, 262146, 1, 262144, 262146, 1, 327680, 262146, 1, 327689, 262146, 1, 262153, 262146, 0, 196617, 262146, 1, 131081, 262146, 1, 65545, 262146, 0, 9, 262146, 1, 8, 262146, 1, 7, 262146, 1, 6, 262146, 1, 5, 262146, 1, 4, 262146, 1, 3, 262146, 1, 393216, 262146, 1, 458752, 262146, 1, 524288, 262146, 1, 524289, 262146, 1, 524290, 262146, 1, 524291, 262146, 1, 524293, 262146, 1, 524294, 262146, 1, 524295, 262146, 1, 524296, 262146, 1, 524297, 262146, 1, 524298, 262146, 1, 524299, 262146, 1, 524300, 262146, 1, 524301, 262146, 1, 524302, 262146, 1, 524303, 262146, 1, 1, 262146, 1, 2, 262146, 1, 12, 262146, 1, 13, 262146, 1, 14, 262146, 1, 15, 262146, 1, 65551, 262146, 1, 131087, 262146, 1, 196623, 262146, 1, 262159, 262146, 1, 327695, 262146, 1, 393231, 262146, 1, 458767, 262146, 1, 65537, 262146, 1, 131073, 262146, 1, 196609, 262146, 1, 262145, 262146, 1, 327681, 262146, 1, 393217, 262146, 1, 458753, 262146, 1, 65550, 262146, 1, 131086, 262146, 1, 196622, 262146, 1, 262158, 262146, 1, 327694, 262146, 1, 393230, 262146, 1, 458766, 262146, 1, 65538, 262146, 1, 131074, 262146, 1, 196610, 262146, 1, 262146, 262146, 1, 327682, 262146, 1, 393218, 262146, 1, 458754, 262146, 1, 65549, 262146, 1, 131085, 262146, 1, 196621, 262146, 1, 262157, 262146, 1, 327693, 262146, 1, 393229, 262146, 1, 458765, 262146, 1, 65548, 262146, 1, 131084, 262146, 1, 196620, 262146, 1, 262156, 262146, 1, 327692, 262146, 1, 393228, 262146, 1, 458764, 262146, 1, 65539, 262146, 1, 131075, 262146, 1, 196611, 262146, 1, 262147, 262146, 1, 327683, 262146, 1, 393219, 262146, 1, 458755, 262146, 1, 10, 262146, 0, 524292, 262146, 0, 458756, 262146, 0, 458757, 262146, 0, 458758, 262146, 0, 458759, 262146, 0, 458760, 262146, 0, 458761, 262146, 0, 458762, 262146, 0, 458763, 262146, 1, 393227, 262146, 1, 327691, 262146, 1, 262155, 262146, 1, 196619, 262146, 1, 131083, 262146, 1, 65547, 262146, 1, 11, 262146, 1, 65546, 262146, 0, 65544, 262146, 0, 65543, 262146, 0, 65542, 262146, 0, 65541, 262146, 0, 65540, 262146, 0, 131076, 262146, 0, 196612, 262146, 0, 262148, 262146, 0, 327684, 262146, 0, 393220, 262146, 0, 131082, 262146, 0, 196618, 262146, 0, 262154, 262146, 0, 327690, 262146, 0, 393226, 262146, 0, 131077, 262146, 1, 131078, 262146, 1, 196614, 262146, 1, 196613, 262146, 1, 131080, 262146, 1, 196616, 262146, 1, 327688, 262146, 1, 393224, 262146, 1, 393225, 262146, 1, 327685, 262146, 1, 327686, 262146, 1, 393222, 262146, 1, 393221, 262146, 1, 262149, 262146, 0, 262150, 262146, 0, 262151, 262146, 0, 262152, 262146, 0, 131079, 262146, 0, 196615, 262146, 0, 327687, 262146, 0, 393223, 262146, 0)
layer_1/name = "margins"
layer_1/enabled = true
layer_1/modulate = Color(1, 1, 1, 1)
layer_1/y_sort_enabled = false
layer_1/y_sort_origin = 0
layer_1/z_index = 1
layer_1/tile_data = PackedInt32Array(524292, 327682, 1, 458756, 327682, 1, 393220, 327682, 1, 327684, 327682, 1, 262148, 327682, 1, 196612, 327682, 1, 131076, 327682, 1, 65540, 327682, 1, 393223, 327682, 1, 327687, 327682, 1, 196615, 327682, 1, 131079, 327682, 1, 131082, 327682, 1, 196618, 327682, 1, 327690, 327682, 1, 393226, 327682, 1, 458757, 393218, 1, 458758, 393218, 1, 458759, 393218, 1, 458760, 393218, 1, 458761, 393218, 1, 458762, 393218, 1, 262149, 393218, 1, 262150, 393218, 1, 262152, 393218, 1, 262153, 393218, 1, 65544, 393218, 1, 65545, 393218, 1, 65541, 393218, 1, 65542, 393218, 1, 10, 327682, 1)
layer_2/name = "margins2"
layer_2/enabled = true
layer_2/modulate = Color(1, 1, 1, 1)
layer_2/y_sort_enabled = false
layer_2/y_sort_origin = 0
layer_2/z_index = 1
layer_2/tile_data = PackedInt32Array(10, 393218, 0, 65546, 393218, 0, 131082, 393218, 0, 196618, 393218, 0, 262154, 393218, 0, 327690, 393218, 0, 393226, 393218, 0, 458762, 393218, 0, 131079, 393218, 0, 196615, 393218, 0, 327687, 393218, 0, 393223, 393218, 0, 131076, 393218, 0, 196612, 393218, 0, 327684, 393218, 0, 393220, 393218, 0, 524292, 393218, 0, 458757, 327682, 0, 458758, 327682, 0, 458760, 327682, 0, 458761, 327682, 0, 262152, 327682, 0, 262153, 327682, 0, 262149, 327682, 0, 262150, 327682, 0, 65540, 327682, 0, 65541, 327682, 0, 65542, 327682, 0, 65543, 327682, 0, 65544, 327682, 0, 65545, 327682, 0)
layer_3/name = "fg"
layer_3/enabled = true
layer_3/modulate = Color(1, 1, 1, 1)
layer_3/y_sort_enabled = false
layer_3/y_sort_origin = 0
layer_3/z_index = 0
layer_3/tile_data = PackedInt32Array()
layer_4/name = "snake"
layer_4/enabled = true
layer_4/modulate = Color(1, 1, 1, 1)
layer_4/y_sort_enabled = false
layer_4/y_sort_origin = 0
layer_4/z_index = 0
layer_4/tile_data = PackedInt32Array(524291, 262146, 1, 458755, 262146, 1, 393219, 262146, 1, 327683, 262146, 1, 262147, 262146, 1, 196611, 262146, 1, 131075, 262146, 1, 65539, 262146, 1, 3, 262146, 1, 4, 262146, 1, 5, 262146, 1, 6, 262146, 1, 7, 262146, 1, 8, 262146, 1, 9, 262146, 1, 11, 262146, 1, 65547, 262146, 1, 131083, 262146, 1, 196619, 262146, 1, 262155, 262146, 1, 327691, 262146, 1, 393227, 262146, 1, 458763, 262146, 1, 524299, 262146, 1, 524298, 262146, 1, 524297, 262146, 1, 524296, 262146, 1, 524295, 262146, 1, 524294, 262146, 1, 524293, 262146, 1, 393221, 262146, 1, 327685, 262146, 1, 327686, 262146, 1, 393222, 262146, 1, 196613, 262146, 1, 131077, 262146, 1, 131078, 262146, 1, 196614, 262146, 1, 196616, 262146, 1, 131080, 262146, 1, 131081, 262146, 1, 196617, 262146, 1, 327688, 262146, 1, 327689, 262146, 1, 393225, 262146, 1, 393224, 262146, 1)

[node name="Apples" type="Node2D" parent="."]

[node name="Apple1" type="Area2D" parent="Apples"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Apples/Apple1"]
position = Vector2(1259, 60)
shape = SubResource("RectangleShape2D_rpxpl")

[node name="Sprite2D" type="Sprite2D" parent="Apples/Apple1"]
position = Vector2(1259, 60)
texture = SubResource("AtlasTexture_gug1r")

[node name="Apple2" type="Area2D" parent="Apples"]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Apples/Apple2"]
position = Vector2(540, 780)
shape = SubResource("RectangleShape2D_rpxpl")

[node name="Sprite2D" type="Sprite2D" parent="Apples/Apple2"]
position = Vector2(540, 780)
texture = SubResource("AtlasTexture_gug1r")

[node name="Apple3" type="Area2D" parent="Apples"]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Apples/Apple3"]
position = Vector2(772, 900)
shape = SubResource("RectangleShape2D_rpxpl")

[node name="Sprite2D" type="Sprite2D" parent="Apples/Apple3"]
position = Vector2(772, 900)
texture = SubResource("AtlasTexture_gug1r")

[node name="Apple4" type="Area2D" parent="Apples"]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Apples/Apple4"]
position = Vector2(1020, 900)
shape = SubResource("RectangleShape2D_rpxpl")

[node name="Sprite2D" type="Sprite2D" parent="Apples/Apple4"]
position = Vector2(1020, 900)
texture = SubResource("AtlasTexture_gug1r")

[node name="Apple5" type="Area2D" parent="Apples"]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Apples/Apple5"]
position = Vector2(1260, 780)
shape = SubResource("RectangleShape2D_rpxpl")

[node name="Sprite2D" type="Sprite2D" parent="Apples/Apple5"]
position = Vector2(1260, 780)
texture = SubResource("AtlasTexture_gug1r")

[node name="Apple6" type="Area2D" parent="Apples"]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Apples/Apple6"]
position = Vector2(780, 540)
shape = SubResource("RectangleShape2D_rpxpl")

[node name="Sprite2D" type="Sprite2D" parent="Apples/Apple6"]
position = Vector2(780, 540)
texture = SubResource("AtlasTexture_gug1r")

[node name="Apple7" type="Area2D" parent="Apples"]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Apples/Apple7"]
position = Vector2(1020, 540)
shape = SubResource("RectangleShape2D_rpxpl")

[node name="Sprite2D" type="Sprite2D" parent="Apples/Apple7"]
position = Vector2(1020, 540)
texture = SubResource("AtlasTexture_gug1r")

[node name="Apple8" type="Area2D" parent="Apples"]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Apples/Apple8"]
position = Vector2(1260, 300)
shape = SubResource("RectangleShape2D_rpxpl")

[node name="Sprite2D" type="Sprite2D" parent="Apples/Apple8"]
position = Vector2(1260, 300)
texture = SubResource("AtlasTexture_gug1r")

[node name="Apple9" type="Area2D" parent="Apples"]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Apples/Apple9"]
position = Vector2(540, 300)
shape = SubResource("RectangleShape2D_rpxpl")

[node name="Sprite2D" type="Sprite2D" parent="Apples/Apple9"]
position = Vector2(540, 300)
texture = SubResource("AtlasTexture_gug1r")

[node name="Apple10" type="Area2D" parent="Apples"]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Apples/Apple10"]
position = Vector2(900, 300)
shape = SubResource("RectangleShape2D_rpxpl")

[node name="Sprite2D" type="Sprite2D" parent="Apples/Apple10"]
position = Vector2(900, 300)
texture = SubResource("AtlasTexture_gug1r")

[node name="Apple11" type="Area2D" parent="Apples"]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Apples/Apple11"]
position = Vector2(900, 780)
shape = SubResource("RectangleShape2D_rpxpl")

[node name="Sprite2D" type="Sprite2D" parent="Apples/Apple11"]
position = Vector2(900, 780)
texture = SubResource("AtlasTexture_gug1r")

[node name="Apple12" type="Area2D" parent="Apples"]
visible = false
position = Vector2(-120, -600)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Apples/Apple12"]
position = Vector2(900, 780)
shape = SubResource("RectangleShape2D_rpxpl")

[node name="Sprite2D" type="Sprite2D" parent="Apples/Apple12"]
position = Vector2(900, 780)
texture = SubResource("AtlasTexture_gug1r")

[node name="Apple13" type="Area2D" parent="Apples"]
visible = false
position = Vector2(120, -600)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Apples/Apple13"]
position = Vector2(900, 780)
shape = SubResource("RectangleShape2D_rpxpl")

[node name="Sprite2D" type="Sprite2D" parent="Apples/Apple13"]
position = Vector2(900, 780)
texture = SubResource("AtlasTexture_gug1r")

[node name="Snake" type="Node2D" parent="."]
position = Vector2(480, 1080)

[node name="Head" type="Area2D" parent="Snake"]
script = ExtResource("2_4e5al")
tail_scene = ExtResource("4_jmum3")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Snake/Head"]
position = Vector2(61, -60)
shape = SubResource("RectangleShape2D_i1m6b")

[node name="Sprite2D" type="Sprite2D" parent="Snake/Head"]
position = Vector2(60, -60)
rotation = -1.5708
texture = SubResource("AtlasTexture_lgbwx")

[node name="RayCast2D" type="RayCast2D" parent="Snake/Head"]
position = Vector2(64, -56)
hit_from_inside = true

[node name="AreaRayCast2D" type="RayCast2D" parent="Snake/Head"]
position = Vector2(61, -60)
collide_with_areas = true
collide_with_bodies = false

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_6liii")
volume_db = 10.0
autoplay = true

[node name="AppleBite" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_1kutd")
pitch_scale = 2.72

[connection signal="area_entered" from="Snake/Head" to="." method="_on_head_area_entered"]
[connection signal="area_exited" from="Snake/Head" to="." method="_on_head_area_exited"]
